Modify sass card styles

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       <span class="card-description">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising
         in the city or on your
         next road trip.</span>
-      <button class="Info-button">Learn More</button>
+      <button class="info-button">Learn More</button>
     </div>
   </section>
 
